[package]
name = "CSS Fingerprinting"
version = "0.1.0"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "css_fingerprinting"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
nodejs-sys = "0.13.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
