[package]
name = "CSSFingerprinting"
version = "0.1.0"
authors = ["OliverBrotchie<o.brotchie@gmail.com>"]
edition = "2018"

#Seemorekeysandtheirdefinitionsathttps://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "wasm_css_fingerprinting"
path = "src/lib.rs"
crate-type  = ["cdylib"]

[[bin]]
name = "css_fingerprinting"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "=0.2.61"
